# worldgen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  worldgen.yaml  worldgen_plan.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: REFERENCE.md
tests/: test_biomes.py  test_cli.py  test_climate.py  test_config.py  test_cultivation.py  test_debug_viewer.py  test_elevation.py  test_habitability.py  test_hex_grid.py  test_hydrology.py  test_json_export.py  test_land_cover.py  test_png_export.py  test_road_cost.py  test_roads.py  test_settlements.py  test_svg_export.py  test_water_bodies.py
worldgen/: cli.py  default_config.yaml
worldgen/core/: config.py  hex.py  hex_grid.py  pipeline.py  world_state.py
worldgen/export/: __init__.py  json_export.py  png_export.py  svg_export.py
worldgen/render/: debug_viewer.py
worldgen/stages/: biomes.py  city_town.py  climate.py  cultivation.py  elevation.py  erosion.py  habitability.py  hydrology.py  interurban_roads.py  land_cover.py  road_cost.py  roads.py  settlements.py  terrain_class.py  village_placement.py  village_tracks.py  water_bodies.py
